# ai-validation-platform

./: .env.example  .gitignore  Makefile  Readme.md  aiosqlite.py  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: phase1.md
.claude/memory/: architecture.md
event_bus/consumers/: base.py
event_bus/publishers/: publisher.py
event_bus/redis_streams/: client.py
event_bus/schemas/: stream_events.py
infrastructure/monitoring/: otel-config.yaml
platform_core/contracts/: base_tool_contract.py  events.py  tool_definition.py  tool_enums.py  tool_models.py  tool_registry.py  tools.py
platform_core/execution/: context.py  executor.py  job.py  lifecycle.py
platform_core/observability/: correlation.py  logging.py  tracing.py
platform_core/sandbox/: models.py  runtime.py
platform_core/schemas/: artifact.py  execution.py
platform_core/tools/: pytest_tool.py
services/coordinator_service/: checkpoints.py  consumer.py  coordinator.py  main.py  state_machine.py
services/tool_execution_service/sandbox/: runtime.py
storage/postgres/: database.py
storage/postgres/models/: artifact_model.py  event_model.py  execution_model.py
storage/postgres/repositories/: __init__.py  artifact_repo.py  checkpoint_repo.py  event_repo.py  execution_repo.py
storage/redis/: connection.py
tests/unit/: test_artifact_repo.py  test_coordinator_integration.py  test_execution_runtime.py  test_sandbox_runtime.py  test_state_machine.py  test_tool_contracts.py  test_tool_registry.py
