[project]
name = "ai-validation-platform"
version = "0.1.0"
description = "AI-native autonomous validation platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "redis>=5.0.7",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "psycopg>=3.2.1",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true